dp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-app
  template:
    metadata:
      labels:
        app: book-app
    spec:
      containers:
      - name: book-app
        image: sumavendrapu/book-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

        volumeMounts:
        - name: app-storage
          mountPath: /data

      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
