ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bookapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-app-service
            port:
              number: 5000
