svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-app-ingress
spec:
  rules:
  - host: bookapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: book-app-service
            port:
              number: 8000
